--- a/templates/pages/faq.html
+++ b/templates/pages/faq.html
@@ -46,9 +46,9 @@
     <li>List some information about digital projectors under $500 in a spreadsheet organized by price, name, and luminosity</li>
     <li>Do 1 hour&apos;s worth of research for a report about the Kudzu Vine, and send it to me in a Word document</li>
     <li>Make dinner reservations for 4 at 7:00pm next Monday at a nice Italian restaurant near my address</li>
-    <li>Give wake-up calls to the following 5 phone numbers before 7:00am next this Friday: ...</li>
+    <li>Give wake-up calls to the following 5 phone numbers before 7:00am next Friday: ...</li>
     <li>Find the top competitors and their phone numbers in the Kansas City coffee house market</li>
-    <li>Purchase flowers and have them delivered to my wife's work at the Walgreens on 116th street. Please be under $50.</li>
+    <li>Purchase flowers and have them delivered to my wife's work at the Walgreens on 116th street. Be under $50.</li>
   </ul>
 </p>
 
