added ticket link

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,2 +1,4 @@
-<a href="/admin/tickets">Tickets</a>
-<a href="/admin/promos">Promo Codes</a>
+<ul>
+<li><a href="/admin/tickets">Tickets</a></li>
+<li><a href="/admin/promos">Promo Codes</a></li>
+</ul>
