moved money back guarentee to middle of front page

--- a/templates/pages/main.html
+++ b/templates/pages/main.html
@@ -18,10 +18,15 @@ eliminate your mundane activities.</p></li>
 </ul>
 </div>
 <div class="bottom"><div class="right"></div><div class="left"></div></div>
+
 </div>
 
 <!-- QUOTES -->
 <div class="quotebox">
+
+<div class="guarantee">
+  <div class="header">110%&nbsp;Money&nbsp;Back&nbsp;Guarantee!<sup> <a href="/guarantee">learn&nbsp;more</a></sup></div>
+</div>
 
 <div class="box firstquote">
 <div class="top"><div class="right"></div><div class="left"></div></div>
