--- a/static/standard.css
+++ b/static/standard.css
@@ -197,6 +197,7 @@ body {
 	margin-right: 20px;
 	float: left;
 	position: absolute;
+	margin-top:20px;
 }
 .quotebox p {
 	padding-left: 40px;
@@ -311,19 +312,33 @@ body {
   margin-left:auto;
   margin-right:auto;
   float:center;
+  /*float:right;*/
   text-align:center;
-  background-color:#E6EAF0;
-  border:3px double #3399FF;
+  background-color:#F1F3F6;
+  border-bottom:3px double #3399FF;
+/*  border-left:3px double #3399FF;
+  border-right:3px double #3399FF;*/
+  width:350px;
+  padding:0 8px 0 8px;
+  position:absolute;
+  top:-6px;
+  left:220px;
+  /*margin-top:-10px;*/
+  /*margin-bottom:-10px;*/
   /*width:220px;*/
 }
 
 .guarantee .header {
   font-weight:bold;
-  /*font-size:1.1em;*/
+  font-size:18px;
+  font-style:italic;
 }
 .guarantee .header sup a {
   color:#3399FF;
-  text-decoration:none;
+  /*text-decoration:none;*/
+  /*font-size:50%;*/
+  font-size:10px;
+  font-style:normal;
 }
 .guarantee .details {
   font-size:0.8em;
