--- a/templates/outer.html
+++ b/templates/outer.html
@@ -24,12 +24,23 @@
 </p>
 <p class="linkbar">
   <a href="http://blog.microtasking.net/"><span>Blog</span></a> |
-  <a href="https://twitter.com/microtasking"><span>Twitter</span></a> | <a href="/about"><span>About</span></a>
+  <a href="https://twitter.com/microtasking"><span>Twitter</span></a> |
+  <a href="/about"><span>About</span></a> |
+  <a href="/press"><span>Press</span></a>
 </p>
 <div class="footer">
   <p>&copy;2009 <a href="/about">MicroTasking.net</a></p>
 </div>
 </div>
+
+<script src='http://files.go2web20.net/twitterbadge/1.0/badge.js' type='text/javascript'></script><script type='text/javascript' charset='utf-8'><!--
+tfb.account = 'microtasking';
+tfb.label = 'follow-us';
+tfb.color = '#a1b0c6';
+tfb.side = 'r';
+tfb.top = 136;
+tfb.showbadge();
+--></script>
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
