give each page a unique title, increases chance of google sitelinks

--- a/templates/outer.html
+++ b/templates/outer.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="/static/images/{{ favicon }}" />
 <link rel="stylesheet" href="/static/base.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="/static/{{ stylesheet }}.css" type="text/css" media="screen" />
-<title>Microtasking: {{ tagline }}</title>
+<title>Microtasking: {{ title|capfirst }}</title>
 </head>
 <body>
 <div class="outer-wrapper">
