added examples to grid

--- a/templates/pages/sizes.html
+++ b/templates/pages/sizes.html
@@ -12,6 +12,7 @@
 		<th><span>Size</span></th>
 		<th><span>Duration</span></th>
 		<th><span>Price</span></th>
+		<th><span>Ideas</span></th>
 	</tr>
 </thead>
 <tbody>
@@ -19,18 +20,22 @@
 		<td><span>{{ small_desc }}</span></td>
 		<td><span>1 hour</span></td>
 		<td><span>{{ currency }}{{ small_price }}</span></td>
+		<td><span class="example">Make dinner reservations for 4 next thursday at...</span></td>
 	</tr><tr>
 		<td><span>{{ medium_desc }}</span></td>
 		<td><span>2 hours</span></td>
 		<td><span>{{ currency }}{{ medium_price }}</span></td>
+		<td><span class="example">Call these 10 companies and discover their CIOs&apos; numbers</span></td>
 	</tr><tr>
 		<td><span>{{ halfday_desc }}</span></td>
 		<td><span>4 hours</span></td>
 		<td><span>{{ currency }}{{ halfday_price }}</span></td>
+		<td><span class="example">Buy 20 Best Buy gift cards and have them sent to my employee's homes</span></td>
 	</tr><tr>
 		<td><span>{{ fullday_desc }}</span></td>
 		<td><span>8 hours</span></td>
 		<td><span>{{ currency }}{{ fullday_price }}</span></td>
+		<td><span class="example">Look over all these resumes, and rank them by this criteria...</span></td>
 	</tr>
 </tbody>
 </table>
