--- a/templates/outer.html
+++ b/templates/outer.html
@@ -33,14 +33,14 @@
 </div>
 </div>
 
-<script src='http://files.go2web20.net/twitterbadge/1.0/badge.js' type='text/javascript'></script><script type='text/javascript' charset='utf-8'><!--
+<!-- script src='http://files.go2web20.net/twitterbadge/1.0/badge.js' type='text/javascript'></script><script type='text/javascript' charset='utf-8'>
 tfb.account = 'microtasking';
 tfb.label = 'follow-us';
 tfb.color = '#a1b0c6';
 tfb.side = 'r';
 tfb.top = 136;
 tfb.showbadge();
---></script>
+</script -->
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
