--- a/templates/pages/busy.html
+++ b/templates/pages/busy.html
@@ -22,6 +22,10 @@
 <!-- QUOTES -->
 <div class="quotebox">
 
+<div class="guarantee">
+  <div class="header">110%&nbsp;Money&nbsp;Back&nbsp;Guarantee!<sup> <a href="/guarantee">learn&nbsp;more</a></sup></div>
+</div>
+
 <div class="box firstquote">
 <div class="top"><div class="right"></div><div class="left"></div></div>
 <div class="middle">
